--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SingHealth QMS</title>
+    <!-- Ensure `global` exists early for libraries that expect a Node-like global in the browser -->
+    <script>window.global = window</script>
   </head>
   <body>
     <div id="root"></div>
